# oop.kursova

./: .gitignore  CHANGES_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_REPORT.md  OPTIMIZATION_SUMMARY.md  PROBLEMS_AND_SOLUTIONS.md  QUICKSTART.md  QUICK_START.md  README.md  UKRAINSKI_RESUME.md  Курсова Гарнага.docx  нотатки
backend_cpp/: CMakeLists.txt  run.bat  run.sh
backend_cpp/include/: api.h  database.h  simulation.h  transport_models.h
backend_cpp/src/: api.cpp  database.cpp  main.cpp  simulation.cpp
desktop_client/: main.py  requirements.txt
docs/: api_spec.md
frontend_py/: app.py
frontend_py/static/: style.css
frontend_py/templates/: admin.html  base.html  index.html  routes.html
